--- a/src/App.css
+++ b/src/App.css
@@ -7,4 +7,29 @@
 }
 
 .image {
+  width: 1000px;
+  height: 600px;
+  border: 10px;
+}
+
+.left-arrow {
+  position: absolute;
+  top: 50%;
+  right: 32px;
+  font-size: 3rem;
+  color: #000;
+  z-index: 10;
+  cursor: pointer;
+  user-select: none;
+}
+
+.right-arrow {
+  position: absolute;
+  top: 50%;
+  left: 32px;
+  font-size: 3rem;
+  color: #000;
+  z-index: 10;
+  cursor: pointer;
+  user-select: none;
 }
