--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 .left-arrow {
   position: absolute;
   top: 50%;
-  right: 32px;
+  left: 32px;
   font-size: 3rem;
   color: #000;
   z-index: 10;
@@ -26,10 +26,21 @@
 .right-arrow {
   position: absolute;
   top: 50%;
-  left: 32px;
+  right: 32px;
   font-size: 3rem;
   color: #000;
   z-index: 10;
   cursor: pointer;
   user-select: none;
+}
+
+.slide {
+  opacity: 0;
+  transition-duration: 1s ease;
+}
+
+.slide.active {
+  opacity: 1;
+  transition-duration: 1s ease;
+  transform: scale(1.08);
 }
